--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Artext.MainPage">
+             x:Class="Artext.MainPage"
+             BackgroundColor="AliceBlue">
 
     <ScrollView>
         <VerticalStackLayout
@@ -10,8 +11,13 @@
             VerticalOptions="Center">
 
             <Button
+                CornerRadius="0"
                 x:Name="CounterBtn"
-                Text="Click me"
+                Text="Create an artext file"
+                TextColor="Black"
+                BorderColor="#8808bf"
+                BorderWidth="2"
+                BackgroundColor="AliceBlue"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
