--- a/ArtextFileDisplay.xaml
+++ b/ArtextFileDisplay.xaml
@@ -2,8 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Artext.ArtextFileDisplay"
-             Title="ArtextFileDisplay">
+             Title="ArtextFileDisplay" Appearing="ContentPage_Appearing">
     <VerticalStackLayout>
-        <Editor />
+        <Grid x:Name="MainGrid" SizeChanged="ContentPage_SizeChanged">
+            <Editor x:Name="EDIT" AutoSize="Disabled" />
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
