--- a/ArtextFileDisplay.xaml
+++ b/ArtextFileDisplay.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Artext.ArtextFileDisplay"
              Title="ArtextFileDisplay" Appearing="ContentPage_Appearing">
-    <VerticalStackLayout>
+    <ScrollView>
         <Grid x:Name="MainGrid" SizeChanged="ContentPage_SizeChanged">
             <Editor x:Name="EDIT" AutoSize="Disabled" />
         </Grid>
-    </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
